improved test code on admin side 100%

--- a/templates/administration/practice/add_question.html
+++ b/templates/administration/practice/add_question.html
@@ -23,7 +23,7 @@ active
 
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="{% url 'practice' %}">Question Set</a></li>
+            <li class="breadcrumb-item pe-auto" onClick="javascript:history.go(-1);">Question Set</li>
 
             </li>
             <li class="breadcrumb-item active" aria-current="page">Add Question</li>
