--- a/templates/administration/practice/edit_question.html
+++ b/templates/administration/practice/edit_question.html
@@ -12,6 +12,17 @@ active
 {% block body %}
 
 <div class="container-fluid">
+
+    <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item pe-auto"><a href="{% url 'instructor_problems' %}">Question Set</a></li>
+            <li class="breadcrumb-item pe-auto">{{ question.title }}</li>
+
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">Edit Question</li>
+        </ol>
+    </nav>
+
     <div class="card">
         <div class="card-body">
             <h5 class="card-title fw-semibold mb-0">Edit Question</i> </h5>
@@ -32,7 +43,7 @@ active
 
                                 <div>
                                     <div class="mb-3">
-                                        <label for="assignment_type" class="form-label">Difficulty Level
+                                        <label for="assignment_type" class="form-label">Sheets
                                             <div class="star">*</div>
                                         </label>
                                         <select class="form-select form-control" name="sheet" id="assignment_type"
