--- a/templates/practice/problem.html
+++ b/templates/practice/problem.html
@@ -410,10 +410,10 @@
                             Draft
                         </button>
                         <button id="restore-draft-btn" type="button" class="btn btn-primary mt-2 mx-1">Restore
-                            Draft</button>
+                            </button>
                         <button id="reset-draft-btn" type="button" class="btn btn-warning mt-2 mx-1"
                             onclick="return confirm('Are you sure you want to reset to the driver code?')">Reset
-                            Draft</button>
+                            </button>
                     </div>
                 </div>
                 <div class="editor-container">
@@ -1179,9 +1179,9 @@
 
                             resultDiv.innerHTML = `
                                 <div class="card-body">
-                                    <p><strong>Your Input:</strong></p>
+                                    <p><strong>Input:</strong></p>
                                     <pre class="px-2 rounded"><p>${test_case_result.input}</p></pre>
-                                    <p><strong>Expected Output:</strong></p>
+                                    <p><strong>Output:</strong></p>
                                     <pre class="px-2 rounded"><p>${test_case_result.expected_output}</p></pre>
                                 </div>
                                 `;
